Version 0.78 - 9 September 2009

- XFdrake:
  o added "Disable Ctrl-Alt-Backspace" option

Version 0.77 - 22 July 2009

- XFdrake:
  o correctly detect proprietary drivers that are located in
    /usr/lib/drivername/xorg (#52384)

Version 0.76 - 25 June 2009

- keyboarddrake: 
  o update the xkb HAL keys when the keyboard layout is changed so that it
    persists after a X server restart. Bug #49725
- XFdrake:
  o when probing for video cards, ignore cards which are not in the VIDEO_VGA
    PCI class (it is pretty common for dual-head ATI cards to have a
    VIDEO_OTHER device for example). This has the potential of breaking
    dual head setups, so it needs careful testing in Cooker ;) See bug #48028
  o fix crash when both monitor and driver can not be probed (in
    harddrake service or XFdrake --auto), for example with some Quanta
    IL1 netbooks using Chrome9 IC3

Version 0.74 - 22 April 2009

- mousedrake:
  o fix vmmouse configuration for vmware (#49654)

Version 0.73 - 21 April 2009

- tweak Intel driver accel methods in xorg.conf so that it's more consistent
  with what the new Intel driver expects.

Version 0.72 - 15 April 2009

- XFdrake:
  o fix selecting proprietary drivers with xdriver=DRIVER boot option
  o do not add Load "freetype" to xorg.conf as the module does not exist
    anymore
  o use Plug'n'Play monitor when in vbox and don't specify any default
    resolution, fixes #49642

Version 0.71 - 2 April 2009

- XFdrake:
  o add support for xdriver=DRIVER kernel boot option that affects
    non-interactive device autodetection, e.g. One boot
    (special value xdriver=free disables proprietary drivers)
  o add nouveau driver into the driver list

Version 0.70 - 20 March 2009

- mousedrake:
  o configure input driver as 'vmmouse' if running in vmware (#29106)
  o test if the file is there before trying to install the packages, that saves 
    a rpm -q in harddrake service after adding/removing/changing a mouse
- XFdrake: